--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Ejemplo de git y github colaborativo</h1>
+    <p>Primer parrafo agregado desde usuario 2</p>
 </body>
 </html>
