--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Ejemplo de git y github colaborativo</h1>
     <p>Primer parrafo agregado desde usuario 2</p>
+    <p>Segundo parrafo agregado desde usuario 2</p>
 </body>
 </html>
