--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Ejemplo de git y github colaborativo</h1>
     <p>Primer parrafo agregado desde usuario 2</p>
     <p>Segundo parrafo agregado desde usuario 2</p>
+
+    <p>Cuarto parrafo desde usuuario 2</p>
 </body>
 </html>
